hphp/test/quick/parse_fail_strict_hashbang_whitespace_start.php.expectf
Fatal error: A source file must begin with '<?hh'. in %s/hphp/test/quick/parse_fail_strict_hashbang_whitespace_start.php on line 3
